@@ -93,7 +93,7 @@ def retrieve_meshes(context, hierarchy, rig, container_name, force_vertex_materi
                     vert_inf.bone_inf = 1.0
 
                 if abs(vert_inf.bone_inf + vert_inf.xtra_inf - 1.0) > 0.1:
-                    context.warning(f'mesh \'{mesh_object.name}\' vertex {i} both bone weights did not add up to 100%!')
+                    context.warning(f'mesh \'{mesh_object.name}\' vertex {i} both bone weights did not add up to 100%! ({vert_inf.bone_inf:.{2}f}, {vert_inf.xtra_inf:.{2}f})')
                     vert_inf.bone_inf = 1.0 - vert_inf.xtra_inf
 
                 mesh_struct.vert_infs.append(vert_inf)
@@ -247,7 +247,7 @@ def retrieve_meshes(context, hierarchy, rig, container_name, force_vertex_materi
             elif 'SCG' in layer.name:
                 target = mesh_struct.material_passes[index].scg
             else:
-                context.warning(f'invalid vertex color layer name \'{layer.name}\'')
+                context.warning(f'vertex color layer name \'{layer.name}\' is not one of [DCG, DIG, SCG]')
                 continue
 
             target = [RGBA] * len(mesh.vertices)
